// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`abis wasm bindings computes a contract address 1`] = `
AztecAddress {
  "buffer": Object {
    "data": Array [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "type": "Buffer",
  },
}
`;

exports[`abis wasm bindings computes a function leaf 1`] = `
Object {
  "data": Array [
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
  ],
  "type": "Buffer",
}
`;

exports[`abis wasm bindings computes a function selector 1`] = `
Object {
  "data": Array [
    169,
    5,
    156,
    187,
    42,
    176,
    158,
    178,
    25,
    88,
    63,
    74,
    89,
    165,
    208,
    98,
    58,
    222,
    52,
    109,
    150,
    43,
    205,
    78,
    70,
    177,
    29,
    160,
    71,
    201,
    4,
  ],
  "type": "Buffer",
}
`;

exports[`abis wasm bindings computes contract leaf 1`] = `
Object {
  "data": Array [
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
  ],
  "type": "Buffer",
}
`;

exports[`abis wasm bindings computes function tree root 1`] = `
Object {
  "data": Array [
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
  ],
  "type": "Buffer",
}
`;

exports[`abis wasm bindings hashes VK 1`] = `
Object {
  "data": Array [
    40,
    221,
    88,
    34,
    147,
    30,
    212,
    40,
    78,
    215,
    171,
    187,
    195,
    165,
    189,
    248,
    159,
    129,
    116,
    79,
    198,
    206,
    240,
    79,
    47,
    188,
    249,
    53,
    89,
    172,
    150,
    107,
  ],
  "type": "Buffer",
}
`;

exports[`abis wasm bindings hashes a tx request 1`] = `
Object {
  "data": Array [
    5,
    199,
    203,
    145,
    207,
    222,
    103,
    152,
    109,
    43,
    192,
    197,
    0,
    230,
    66,
    174,
    222,
    157,
    84,
    111,
    45,
    217,
    9,
    63,
    92,
    243,
    5,
    178,
    78,
    169,
    61,
    50,
  ],
  "type": "Buffer",
}
`;
